--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -38,3 +38,7 @@ body {
     max-width: 100%;
   }
 }
+
+#hubspot-messages-iframe-container {
+  z-index: 10;
+}
